libhdate (1.4.9)

  * Fix endianess bug in big endian machins (/examples/hcal/hcal.c and hdate.c)
	
  -- Yaacov Zamir <kzamir@wall.co.il>  Saturday, 7 April 2007 22:00

libhdate (1.4.8)

  * Fix help printing bug: Add new line at the end of hdate help text.
  * Add two new functios to the time of day section:
      hdate_get_utc_sun_time_full - gets the time of first light,
      talit, sunris, sunset, first stars and three stars.
      hdate_get_utc_sun_time_deg - gets the time the sun is on
      some known altitude.
  * Add Times of day to hdate command line tool.
     supported times: first-light, talit, sunrise, mid-day, sunset, first-stars
     and three-stars
  * Add Times of Shabat enter/leave to hdate command line tool.
     Shabat starts 20 min before sunset, and leave at three stars.
  * Add new oprions in hdate command line tool to it's man page
	
  -- Yaacov Zamir <kzamir@wall.co.il>  Tue, 8 Jun 2006 12:13
  
libhdate (1.4.7)

  * Fix pesach II in hebrew po file.
  * hcal utility export strict html 4.01.
  * hcal utility can export diaspora holidays
  * Update hcal utility man file.

  -- Yaacov Zamir <kzamir@wall.co.il>  Tue, 18 Apr 2006 12:13

libhdate (1.4.3)

  * Fix header of spanish po file.
  * Daniel Nylander: Swedish translation.

  -- Yaacov Zamir <kzamir@wall.co.il>  Mon, 10 Apr 2006 12:13
  
libhdate (1.4.2)

  * Ido Kanner <idokan@gmail.com> - Update free pascal bindings.
  * Update address of Free Software Foundation in COPYING file.
  * make the spec.in file more configurable.

  -- Yaacov Zamir <kzamir@wall.co.il>  Fri, 25 Nov 2005 12:13
  
libhdate (1.4.0)

  * Michael Kaminsky - libhdate now reports the 2nd day of yom
    tov on Sukkot and Peseach as Yom Tov and not Chol Hamoed.
  * Cange C++ API - insert the location and diaspora flag as
    part of the hdate object.
  * Docomentation - separate the c and the cpp docs, more readable.
  * hdate example can now export iCal formated output.
